feat: Add website verification meta tag
Includes a meta tag for website verification to aid in SEO and analytics setup.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ZenStream - Cinematic Discovery</title>
   
+  <!-- Verification Meta Tags -->
+  <meta name="bf41776be360dbad576f1d13087566655269322f" content="bf41776be360dbad576f1d130875666552693">
+
   <!-- SEO & Social Meta Tags -->
   <meta name="description" content="Explore millions of movies and series with ZenStream. Pure cinematic discovery powered by AI." />
   <meta name="keywords" content="movies, series, streaming, zenstream, anime, cinematic discovery, AI search" />
