feat: Implement PWA features
Integrates ZenStream with Progressive Web App capabilities by adding a manifest file, service worker for offline caching, and enabling installation prompts. This enhances the user experience by allowing offline access and a native-like app experience.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ZenStream - Cinematic Discovery</title>
   
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="./manifest.json">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/fluency/192/000000/movie-projector.png">
+
   <!-- Verification Meta Tags -->
   <meta name="1d13087566655269322f" content="1d13087566655269322f">
 
