feat: Add Adsterra social link and update service worker
Integrates a new Adsterra social link script into the index.html.
Updates the service worker to improve cache management and implement a more robust network-first strategy for navigation requests, ensuring better offline experience for the single-page application. Also increments cache version.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   
   <!-- Monetization: Adsterra -->
   <script src="https://pl28351212.effectivegatecpm.com/4b/be/28/4bbe28318840efb9316eb08d90033a6b.js"></script>
+  <!-- Adsterra Social Link -->
+  <script src="https://pl28354417.effectivegatecpm.com/f2/16/51/f21651dc53745e5eab95160e7acda4de.js"></script>
   
   <!-- Performance Preconnects -->
   <link rel="preconnect" href="https://image.tmdb.org">
